Add foregin key search!

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
                     type: 'post',
                     url: '/lms/trans',
                     contentType: "application/json; charset=utf-8",
-                    data: JSON.stringify({dbtype:"mysql",url:"127.0.0.1",port:"3306",dbname:"chatroom",username:"root",password:"123456",column:[{name:"id"},{name:"password"}],tableName: "account"}),
+                    data: JSON.stringify({dbtype:"mysql",url:"127.0.0.1",port:"3306",dbname:"chatroom",username:"root",password:"123456",tables:{name:"account",columns:["*"],fk:"true"}}),
                     dataType: 'json'
                 });
             })
